[gd_scene load_steps=6 format=4 uid="uid://bdlk7innnmi87"]

[ext_resource type="Script" uid="uid://bv0is7ch7q2y8" path="res://scenes/world/maps/map_base.gd" id="1_3igsj"]
[ext_resource type="TileSet" uid="uid://cgi4ajhvt0mb3" path="res://scenes/world/maps/map_base_default_tileset.tres" id="2_boh3a"]
[ext_resource type="NavigationPolygon" uid="uid://drw08ewc8k0n" path="res://scenes/world/maps/room_a-1_navpoly.tres" id="3_eyw5l"]
[ext_resource type="Script" uid="uid://b15tm4ends0yf" path="res://game/systems/spawn_system.gd" id="3_ou0rn"]
[ext_resource type="NavigationPolygon" uid="uid://cqb68a3fdt5cq" path="res://scenes/world/maps/room_a-2_navpoly.tres" id="4_eyw5l"]

[node name="MapBase" type="Node2D"]
script = ExtResource("1_3igsj")
player_spawn_path = NodePath("SpawnSources/PlayerSpawn")

[node name="Tiles" type="Node2D" parent="."]

[node name="Floor" type="TileMapLayer" parent="Tiles" groups=["navigation"]]
unique_name_in_owner = true
position = Vector2(144, 48)
tile_map_data = PackedByteArray("AAADAAAAAgAJAAIAAAAEAAAAAgAJAAIAAAAEAAEAAgAJAAIAAAADAAEAAgAJAAIAAAACAAIAAgAJAAIAAAADAAIAAgAJAAIAAAAEAAIAAgAJAAIAAAAFAAIAAgAJAAIAAAABAAMAAgAJAAIAAAACAAMAAgAJAAIAAAADAAMAAgAJAAIAAAAEAAMAAgAJAAIAAAAFAAMAAgAJAAIAAAAGAAMAAgAJAAIAAAAGAAQAAgAFAAIAAAAFAAQAAgAJAAMAAAAEAAQAAgAJAAMAAAADAAQAAgAJAAMAAAACAAQAAgAJAAMAAAABAAQAAgAGAAIAAAABAAUAAgALAAIAAAABAAYAAgAGAAEAAAADAAYAAgAKAAAAAAAEAAYAAgAKAAAAAAAFAAYAAgAKAAAAAAAGAAYAAgAFAAEAAAAGAAUAAgAIAAEAAAACAAUAAwAAAAAAAAABAAcAAgAJAAIAAAACAAcAAgAJAAIAAAADAAcAAgAJAAIAAAAEAAcAAgAJAAIAAAAFAAcAAgAJAAIAAAAGAAcAAgAJAAIAAAAHAAUAAgAJAAIAAAAIAAQAAgAJAAIAAAAIAAUAAgAJAAIAAAAIAAYAAgAJAAMAAAAJAAYAAgALAAMAAAAJAAUAAgAGAAIAAAAJAAQAAgAGAAEAAAAAAAUAAgAJAAIAAAD//wQAAgAJAAIAAAD//wUAAgAJAAIAAAD//wYAAgAJAAMAAAD+/wYAAgAIAAMAAAD+/wUAAgAFAAIAAAD+/wQAAgAFAAEAAAACAAAAAgAIAAEAAAACAAEAAgAFAAEAAAABAAEAAgAIAAAAAAABAAIAAgAFAAEAAAAFAAAAAgALAAIAAAAGAAAAAwAAAAAAAAAGAAEAAgALAAAAAAAFAAEAAgAGAAEAAAAGAAIAAgAGAAEAAAAHAAIAAgALAAAAAAAHAAMAAgAGAAEAAAAHAAQAAgAJAAIAAAAIAAMAAgAKAAAAAAAJAAMAAgALAAAAAAD9/wUAAgAJAAMAAAD9/wYAAwAAAAAAAAAAAAcAAgAIAAEAAAAAAAYAAgAFAAIAAAAAAAgAAgAIAAMAAAABAAgAAgAFAAIAAAACAAgAAgAGAAIAAAADAAgAAgAJAAMAAAAEAAgAAgAJAAMAAAAFAAgAAgAFAAIAAAAGAAgAAgAGAAIAAAAHAAgAAgALAAMAAAAHAAYAAgAGAAIAAAAHAAcAAgALAAIAAAAIAAcAAwAAAAAAAAAJAAcAAwAAAAAAAAAKAAcAAwAAAAAAAAAKAAYAAwAAAAAAAAAKAAUAAgAJAAMAAAAKAAQAAgAKAAAAAAAKAAMAAwAAAAAAAAAKAAIAAwAAAAAAAAABAAAAAwAAAAAAAAABAP//AwAAAAAAAAACAP//AgAIAAEAAAADAP//AgAJAAIAAAAEAP//AgAJAAIAAAAFAP//AgALAAIAAAAGAP//AwAAAAAAAAAHAP//AwAAAAAAAAAIAP//AwAAAAAAAAAJAP//AwAAAAAAAAAKAP//AwAAAAAAAAAKAAAAAwAAAAAAAAAKAAEAAwAAAAAAAAAJAAIAAwAAAAAAAAAIAAIAAwAAAAAAAAAHAAEAAwAAAAAAAAAHAAAAAwAAAAAAAAAIAAAAAwAAAAAAAAAJAAAAAwAAAAAAAAAJAAEAAwAAAAAAAAAIAAEAAwAAAAAAAAAIAAgAAwAAAAAAAAAJAAgAAwAAAAAAAAAKAAgAAwAAAAAAAAD9/wQAAgAKAAAAAAD9/wMAAwAAAAAAAAD9/wIAAwAAAAAAAAD9/wEAAwAAAAAAAAD9/wAAAwAAAAAAAAD9////AwAAAAAAAAD+////AwAAAAAAAAD/////AwAAAAAAAAAAAP//AwAAAAAAAAAAAAAAAwAAAAAAAAAAAAEAAwAAAAAAAAAAAAIAAgAIAAAAAAAAAAMAAgAFAAEAAAAAAAQAAgAJAAIAAAD//wMAAgAKAAAAAAD+/wMAAgAIAAAAAAD+/wIAAwAAAAAAAAD+/wEAAwAAAAAAAAD+/wAAAwAAAAAAAAD//wAAAwAAAAAAAAD//wEAAwAAAAAAAAD//wIAAwAAAAAAAAAEAAkAAwAAAAAAAAADAAkAAwAAAAAAAAABAAoAAgAFAAEAAAACAAoAAgAGAAEAAAADAAoAAgAKAAAAAAAEAAoAAgAKAAAAAAAFAAoAAgAFAAEAAAAGAAoAAgAGAAEAAAAGAAsAAgAJAAIAAAAFAAsAAgAJAAIAAAAEAAsAAgAJAAIAAAADAAsAAgAJAAIAAAACAAsAAgAJAAIAAAABAAsAAgAJAAIAAAABAAwAAgAJAAIAAAACAAwAAgAJAAIAAAADAAwAAgAJAAIAAAAEAAwAAgAJAAIAAAAFAAwAAgAJAAIAAAAGAAwAAgAJAAIAAAABAA0AAgAJAAIAAAACAA0AAgAJAAIAAAADAA0AAgAJAAIAAAAEAA0AAgAJAAIAAAAFAA0AAgAJAAIAAAAGAA0AAgAJAAIAAAABAA4AAgAJAAIAAAACAA4AAgAJAAIAAAADAA4AAgAJAAIAAAAEAA4AAgAJAAIAAAAFAA4AAgAJAAIAAAAGAA4AAgAJAAIAAAADAA8AAgAJAAMAAAAEAA8AAgAJAAMAAAAEABAAAwAAAAAAAAADABAAAwAAAAAAAAABAA8AAgAGAAIAAAACAA8AAgAJAAMAAAACABAAAwAAAAAAAAABABAAAgALAAIAAAABABEAAgALAAIAAAACABEAAwAAAAAAAAADABEAAwAAAAAAAAAEABEAAwAAAAAAAAAFABEAAwAAAAAAAAAGABEAAgAIAAEAAAAGABAAAgAIAAEAAAAGAA8AAgAFAAIAAAAFAA8AAgAJAAMAAAAFABAAAwAAAAAAAAAAABEAAgAJAAIAAAD//xEAAgAFAAIAAAD+/xEAAgAJAAMAAAD+/xAAAgAKAAAAAAD//xAAAgAFAAEAAAAAABAAAgAJAAIAAAAHABAAAgAJAAIAAAAIABAAAgAGAAEAAAAJABAAAgALAAAAAAAJABEAAgAGAAMAAAAIABEAAgAGAAIAAAAHABEAAgAJAAIAAAABABIAAgAGAAEAAAACABIAAgAKAAAAAAADABIAAgAKAAAAAAAEABIAAgAKAAAAAAAFABIAAgAKAAAAAAAGABIAAgAFAAEAAAADABMAAgAFAAIAAAAEABMAAgAGAAIAAAADABQAAgAIAAEAAAAEABQAAgALAAIAAAAEABUAAgALAAIAAAADABUAAgAIAAEAAAAEABYAAgALAAMAAAADABYAAgAIAAMAAAACAAkAAgALAAIAAAABAAkAAgAIAAEAAAAAAAkAAwAAAAAAAAAAAAoAAgAIAAAAAAAAAAsAAgAIAAEAAAAAAAwAAgAIAAEAAAAAAA0AAgAIAAEAAAAAAA4AAgAIAAEAAAAAAA8AAgAFAAEAAAD//w8AAgAIAAAAAAD+/w8AAwAAAAAAAAD9/w8AAwAAAAAAAAD9/xAAAgAKAAAAAAAFAAkAAgAIAAEAAAAGAAkAAgALAAIAAAAHAAkAAwAAAAAAAAAHAAoAAgALAAAAAAAHAAsAAgALAAIAAAAHAAwAAgALAAIAAAAHAA0AAgALAAIAAAAHAA4AAgALAAIAAAAHAA8AAgAGAAEAAAAIAA8AAgALAAAAAAAJAA8AAwAAAAAAAAAKAA8AAwAAAAAAAAAKABAAAwAAAAAAAAAKABEAAgACAAMAAAAKABIAAwAAAAAAAAAJABIAAwAAAAAAAAAIABIAAgALAAMAAAAHABIAAgAGAAIAAAAHABMAAgALAAMAAAAGABMAAgAJAAMAAAAFABMAAgAJAAMAAAACABMAAgAJAAMAAAABABMAAgAJAAMAAAAAABMAAgAIAAMAAAAAABIAAgAFAAIAAAD//xIAAgAIAAMAAAD+/xIAAwAAAAAAAAD9/xIAAwAAAAAAAAD9/xEAAgAJAAMAAAAFABQAAwAAAAAAAAAFABUAAwAAAAAAAAAFABYAAwAAAAAAAAAFABcAAwAAAAAAAAAEABcAAwAAAAAAAAADABcAAwAAAAAAAAACABcAAwAAAAAAAAD//woAAwAAAAAAAAD//wsAAwAAAAAAAAD//wwAAwAAAAAAAAD//w0AAwAAAAAAAAD//w4AAwAAAAAAAAAIAAkAAwAAAAAAAAAIAAoAAwAAAAAAAAAIAAsAAwAAAAAAAAAIAAwAAwAAAAAAAAAIAA0AAwAAAAAAAAAIAA4AAwAAAAAAAAACABQAAwAAAAAAAAAAABQAAwAAAAAAAAABABQAAwAAAAAAAAAGABQAAwAAAAAAAAAHABQAAwAAAAAAAAALABAAAgAIAAEAAAALABEAAgAIAAIAAAAMABEAAgAJAAIAAAANABEAAgAJAAIAAAANABAAAgAJAAIAAAAMABAAAgAJAAIAAAALAA8AAgAIAAEAAAAMAA8AAgAJAAIAAAANAA8AAgAJAAIAAAAOAA8AAgAJAAIAAAAPAA8AAgAJAAIAAAAPABAAAgAJAAIAAAAOABAAAgAJAAIAAAAOABEAAgAJAAIAAAAOABIAAgAJAAIAAAAOABMAAgAJAAMAAAANABMAAgAJAAMAAAAMABMAAgAJAAMAAAAMABIAAgAJAAIAAAALABIAAgAIAAEAAAALABMAAgAIAAMAAAAPABIAAgAJAAIAAAAPABEAAgAJAAIAAAAPABMAAgAJAAMAAAANABIAAgAJAAIAAAAKABMAAwAAAAAAAAAKABQAAwAAAAAAAAALABQAAwAAAAAAAAAMABQAAwAAAAAAAAANABQAAwAAAAAAAAAOABQAAwAAAAAAAAAPABQAAwAAAAAAAAAQABQAAwAAAAAAAAAQABMAAgAJAAMAAAAQABIAAgAJAAIAAAAQABEAAgAJAAIAAAAQABAAAgAJAAIAAAAQAA8AAgAJAAIAAAAQAA4AAgAJAAIAAAAKAA4AAwAAAAAAAAALAA4AAgAIAAEAAAAMAA4AAgAJAAIAAAANAA4AAgAJAAIAAAAOAA4AAgAJAAIAAAAPAA4AAgAJAAIAAAAOAA0AAgAJAAIAAAANAA0AAgAJAAIAAAAMAA0AAgAJAAIAAAAMAAwAAgAJAAIAAAANAAwAAgAJAAIAAAAOAAwAAgAJAAIAAAAJAAwAAgAIAAEAAAAKAAwAAgAJAAIAAAALAAwAAgAJAAIAAAAPAAwAAgAJAAIAAAAQAAwAAgAJAAIAAAARAAwAAgAJAAIAAAARAAsAAgAJAAIAAAAQAAsAAgAJAAIAAAARAAoAAgAKAAAAAAAQAAoAAgAKAAAAAAAPAAoAAgAKAAAAAAAOAAoAAgAKAAAAAAANAAoAAgAKAAAAAAAMAAoAAgAKAAAAAAALAAoAAgAKAAAAAAAKAAoAAgAKAAAAAAAJAAoAAgAIAAAAAAAJAAsAAgAIAAEAAAAKAAsAAgAJAAIAAAALAAsAAgAJAAIAAAAMAAsAAgAJAAIAAAANAAsAAgAJAAIAAAAOAAsAAgAJAAIAAAAPAAsAAgAJAAIAAAAJAA0AAgAIAAMAAAAKAA0AAgAJAAMAAAALAA0AAgAFAAIAAAAJAA4AAwAAAAAAAAAPAA0AAgAJAAIAAAAQAA0AAgAJAAIAAAARAA0AAgAGAAIAAAASAA0AAgAJAAMAAAASAAwAAgAJAAIAAAASAAsAAgAJAAIAAAASAAoAAgAKAAAAAAASAAkAAwAAAAAAAAARAAkAAwAAAAAAAAAQAAkAAwAAAAAAAAAPAAkAAwAAAAAAAAAOAAkAAwAAAAAAAAANAAkAAwAAAAAAAAAMAAkAAwAAAAAAAAAJAAkAAwAAAAAAAAALAAkAAwAAAAAAAAAKAAkAAwAAAAAAAAD//wkAAwAAAAAAAAD//wgAAwAAAAAAAAD//wcAAwAAAAAAAAD+/wcAAwAAAAAAAAD9/wcAAwAAAAAAAAD9/wgAAgAIAAAAAAD+/wgAAgALAAAAAAD+/wkAAgALAAIAAAD9/wkAAgAIAAEAAAD9/woAAgAFAAEAAAD+/woAAgALAAIAAAD9/wsAAgAJAAIAAAD9/wwAAgAFAAIAAAD9/w0AAgAIAAMAAAD9/w4AAwAAAAAAAAD+/w4AAwAAAAAAAAD+/w0AAgALAAMAAAD+/wwAAgALAAIAAAD+/wsAAgALAAIAAAAEAAUAAwAAAAAAAAACAAYAAgAKAAAAAAADAAUAAwAAAAAAAAD8/wQAAgAKAAAAAAD8/wUAAgAJAAMAAAD7/wUAAgAGAAIAAAD7/wMAAgALAAIAAAD7/wQAAgAGAAEAAAD7/wYAAgALAAIAAAD7/wcAAgALAAIAAAD6/wcAAgAJAAIAAAD5/wcAAgAJAAIAAAD5/wYAAgAJAAIAAAD5/wUAAgAJAAIAAAD5/wQAAgAJAAIAAAD5/wMAAgAJAAIAAAD6/wMAAgAJAAIAAAD6/wQAAgAJAAIAAAD6/wUAAgAJAAIAAAD6/wYAAgAJAAIAAAD4/wcAAgAIAAEAAAD4/wYAAgAIAAEAAAD4/wUAAgAIAAEAAAD4/wQAAgAIAAEAAAD4/wMAAgAIAAEAAAALAAQAAgAFAAEAAAALAAMAAgAIAAEAAAAMAAMAAgAJAAIAAAALAAIAAgAIAAAAAAAMAAIAAgAKAAAAAAANAAIAAgAKAAAAAAANAAMAAgAJAAIAAAANAAQAAgAJAAIAAAANAAUAAgAJAAIAAAANAAYAAgAJAAIAAAANAAcAAgAJAAIAAAANAAgAAgAJAAMAAAAMAAgAAgAJAAMAAAAMAAcAAgAJAAIAAAALAAcAAgAIAAEAAAALAAYAAgAIAAEAAAALAAUAAgAFAAIAAAALAAgAAgAIAAMAAAAMAAYAAgAJAAIAAAAMAAUAAgAJAAIAAAAMAAQAAgAJAAIAAAD6/wgAAgAJAAMAAAD7/wgAAgALAAMAAAD5/wgAAgAJAAMAAAD4/wgAAgAIAAMAAAAOAAgAAgALAAMAAAAOAAcAAgALAAIAAAAOAAYAAgALAAIAAAAOAAUAAgALAAIAAAAOAAQAAgALAAIAAAAOAAMAAgALAAIAAAAOAAIAAgALAAAAAAD6/wIAAgAKAAAAAAD7/wIAAgALAAAAAAD5/wIAAgAKAAAAAAD4/wIAAgAIAAAAAAACAP7/AgAIAAAAAAADAP7/AgAKAAAAAAAEAP7/AgAKAAAAAAAFAP7/AgALAAAAAAABAP7/AwAAAAAAAAABAP3/AwAAAAAAAAACAP3/AwAAAAAAAAADAP3/AwAAAAAAAAAEAP3/AwAAAAAAAAAFAP3/AwAAAAAAAAAGAP3/AwAAAAAAAAAKAP7/AwAAAAAAAAAJAP7/AwAAAAAAAAAIAP3/AwAAAAAAAAAHAP3/AwAAAAAAAAAGAP7/AwAAAAAAAAAHAP7/AwAAAAAAAAAIAP7/AwAAAAAAAAAJAP3/AwAAAAAAAAAKAP3/AwAAAAAAAAALAP3/AwAAAAAAAAAMAP3/AwAAAAAAAAAMAP7/AwAAAAAAAAAMAP//AwAAAAAAAAANAP//AwAAAAAAAAANAAAAAwAAAAAAAAANAAEAAwAAAAAAAAAOAAEAAwAAAAAAAAAOAAAAAwAAAAAAAAAOAP//AwAAAAAAAAAOAP7/AwAAAAAAAAAOAP3/AwAAAAAAAAANAP3/AwAAAAAAAAANAP7/AwAAAAAAAAALAP//AwAAAAAAAAALAAAAAwAAAAAAAAAMAAAAAwAAAAAAAAAMAAEAAwAAAAAAAAALAAEAAwAAAAAAAAALAP7/AwAAAAAAAAD4//3/AwAAAAAAAAD5//3/AwAAAAAAAAD6//3/AwAAAAAAAAD7//3/AwAAAAAAAAD8//3/AwAAAAAAAAD9//3/AwAAAAAAAAD+//3/AwAAAAAAAAD///3/AwAAAAAAAAAAAP3/AwAAAAAAAAD3/xIAAwAAAAAAAAD3/xEAAwAAAAAAAAD3/xAAAwAAAAAAAAD3/w8AAgAIAAMAAAD3/w4AAgAIAAEAAAD3/w0AAgAIAAEAAAD3/wwAAgAIAAEAAAD3/wsAAgAIAAEAAAD3/woAAgAIAAAAAAD3/wkAAwAAAAAAAAD3/wgAAwAAAAAAAAD3/wcAAwAAAAAAAAD3/wYAAwAAAAAAAAD3/wUAAwAAAAAAAAD3/wQAAwAAAAAAAAD3/wMAAwAAAAAAAAD3/wIAAwAAAAAAAAD3/wEAAwAAAAAAAAD3/wAAAwAAAAAAAAD3////AwAAAAAAAAD3//7/AwAAAAAAAAD3//3/AwAAAAAAAAD8/xIAAgALAAIAAAD7/xIAAgAIAAEAAAD6/xIAAwAAAAAAAAD5/xIAAwAAAAAAAAD4/xIAAwAAAAAAAAD8/wYAAwAAAAAAAAD8/xEAAgAGAAIAAAD8/xAAAgAGAAEAAAD8/w8AAgALAAIAAAD8/w4AAgALAAAAAAD8/w0AAwAAAAAAAAD8/wwAAgAJAAMAAAD8/wsAAgAJAAIAAAD8/woAAgAKAAAAAAD8/wkAAwAAAAAAAAD8/wgAAwAAAAAAAAD8/wcAAwAAAAAAAAD7/wsAAgAJAAIAAAD7/wwAAgAJAAMAAAD7/w0AAwAAAAAAAAD7/w4AAgAKAAAAAAD7/w8AAgAFAAIAAAD7/xAAAgAIAAEAAAD7/xEAAgAIAAEAAAD6/wsAAgAFAAIAAAD6/wwAAgAIAAMAAAD6/w0AAwAAAAAAAAD6/w4AAgAKAAAAAAD6/w8AAgAJAAMAAAD6/xAAAwAAAAAAAAD6/xEAAwAAAAAAAAD5/wsAAgAJAAMAAAD5/wwAAwAAAAAAAAD5/w0AAwAAAAAAAAD5/w4AAgAKAAAAAAD5/w8AAgAJAAMAAAD5/xAAAwAAAAAAAAD5/xEAAwAAAAAAAAD4/wsAAgAGAAIAAAD4/wwAAgALAAIAAAD4/w0AAgALAAIAAAD4/w4AAgAGAAEAAAD4/w8AAgAJAAMAAAD4/xAAAwAAAAAAAAD4/xEAAwAAAAAAAAD7/wkAAwAAAAAAAAD6/wkAAwAAAAAAAAD5/wkAAwAAAAAAAAD4/wkAAwAAAAAAAAD7/woAAgAKAAAAAAD6/woAAgAKAAAAAAD5/woAAgAKAAAAAAD4/woAAgAKAAAAAAD2//3/AwAAAAAAAAD2//7/AwAAAAAAAAD2////AwAAAAAAAAD2/wAAAwAAAAAAAAD2/wEAAwAAAAAAAAD2/wIAAwAAAAAAAAD2/wMAAwAAAAAAAAD2/wQAAwAAAAAAAAD2/wUAAwAAAAAAAAD2/wYAAwAAAAAAAAD2/wcAAwAAAAAAAAD2/wgAAwAAAAAAAAD2/wkAAwAAAAAAAAD2/woAAwAAAAAAAAD2/wsAAwAAAAAAAAD2/wwAAwAAAAAAAAD2/w0AAwAAAAAAAAD2/w4AAwAAAAAAAAD2/w8AAwAAAAAAAAD2/xAAAwAAAAAAAAD2/xEAAwAAAAAAAAD2/xIAAwAAAAAAAAD8//7/AwAAAAAAAAD7//7/AwAAAAAAAAD6//7/AwAAAAAAAAD5//7/AwAAAAAAAAD4//7/AwAAAAAAAAD8/wEAAwAAAAAAAAD7/wEAAwAAAAAAAAD6/wEAAwAAAAAAAAD5/wEAAwAAAAAAAAD4/wEAAwAAAAAAAAD8/wAAAwAAAAAAAAD7/wAAAwAAAAAAAAD6/wAAAwAAAAAAAAD5/wAAAwAAAAAAAAD4/wAAAwAAAAAAAAD8////AwAAAAAAAAD7////AwAAAAAAAAD6////AwAAAAAAAAD5////AwAAAAAAAAD4////AwAAAAAAAAD///7/AwAAAAAAAAD+//7/AwAAAAAAAAD9//7/AwAAAAAAAAAAAP7/AwAAAAAAAAD8/wIAAwAAAAAAAAD8/wMAAwAAAAAAAAAPAP3/AwAAAAAAAAAPAAgAAwAAAAAAAAAPAAcAAwAAAAAAAAAPAAYAAwAAAAAAAAAPAAUAAwAAAAAAAAAPAAQAAwAAAAAAAAAPAAMAAwAAAAAAAAAPAAIAAwAAAAAAAAAPAAEAAwAAAAAAAAAPAAAAAwAAAAAAAAAPAP//AwAAAAAAAAAPAP7/AwAAAAAAAAAQAP3/AwAAAAAAAAAQAP7/AwAAAAAAAAAQAP//AwAAAAAAAAAQAAAAAwAAAAAAAAAQAAEAAwAAAAAAAAAQAAIAAwAAAAAAAAAQAAMAAwAAAAAAAAAQAAQAAwAAAAAAAAAQAAUAAwAAAAAAAAAQAAYAAwAAAAAAAAAQAAcAAwAAAAAAAAAQAAgAAwAAAAAAAAARAP3/AwAAAAAAAAARAP7/AwAAAAAAAAARAP//AwAAAAAAAAARAAAAAwAAAAAAAAARAAEAAwAAAAAAAAARAAIAAwAAAAAAAAARAAMAAwAAAAAAAAARAAQAAwAAAAAAAAARAAUAAwAAAAAAAAARAAYAAwAAAAAAAAARAAcAAwAAAAAAAAARAAgAAwAAAAAAAAASABQAAwAAAAAAAAASABMAAwAAAAAAAAASABIAAwAAAAAAAAASABEAAwAAAAAAAAASABAAAwAAAAAAAAASAA8AAwAAAAAAAAASAA4AAwAAAAAAAAASAAgAAwAAAAAAAAASAAcAAwAAAAAAAAASAAYAAwAAAAAAAAASAAUAAwAAAAAAAAASAAQAAwAAAAAAAAASAAMAAwAAAAAAAAASAAIAAwAAAAAAAAASAAEAAwAAAAAAAAASAAAAAwAAAAAAAAASAP//AwAAAAAAAAASAP7/AwAAAAAAAAASAP3/AwAAAAAAAAARAA4AAgALAAIAAAARAA8AAgALAAIAAAARABAAAgALAAIAAAARABEAAgALAAIAAAARABIAAgALAAIAAAARABMAAgALAAMAAAARABQAAwAAAAAAAAATAAoAAgAKAAAAAAATAAsAAgAJAAIAAAATAAwAAgAJAAIAAAATAA0AAgAJAAMAAAAUAAoAAgALAAAAAAAUAAsAAgALAAIAAAAUAAwAAgALAAIAAAAUAA0AAgALAAMAAAATAAkAAwAAAAAAAAAUAAkAAwAAAAAAAAAVAAkAAwAAAAAAAAAVAAoAAwAAAAAAAAAVAAsAAwAAAAAAAAAVAAwAAwAAAAAAAAAVAA0AAwAAAAAAAAAVAA4AAwAAAAAAAAAUAA4AAwAAAAAAAAATAA4AAwAAAAAAAAATAA8AAwAAAAAAAAAUAA8AAwAAAAAAAAAVAA8AAwAAAAAAAAAWAA8AAwAAAAAAAAAWAA4AAwAAAAAAAAAWAA0AAwAAAAAAAAAWAAwAAwAAAAAAAAAWAAsAAwAAAAAAAAAWAAoAAwAAAAAAAAAWAAkAAwAAAAAAAAAWAAgAAwAAAAAAAAAVAAgAAwAAAAAAAAAUAAgAAwAAAAAAAAATAAgAAwAAAAAAAAAIABMAAwAAAAAAAAAJABMAAwAAAAAAAAAIABQAAwAAAAAAAAAJABQAAwAAAAAAAAD//xMAAwAAAAAAAAD//xQAAwAAAAAAAAD+/xQAAwAAAAAAAAD+/xMAAwAAAAAAAAD9/xMAAwAAAAAAAAD9/xQAAwAAAAAAAAD8/xQAAgALAAMAAAD8/xMAAgALAAIAAAD7/xMAAgAIAAEAAAD7/xQAAgAIAAMAAAD6/xMAAwAAAAAAAAD6/xQAAwAAAAAAAAD6/xUAAwAAAAAAAAD7/xUAAwAAAAAAAAD8/xUAAwAAAAAAAAD9/xUAAwAAAAAAAAAFAAUAAwAAAAAAAAA=")
tile_set = ExtResource("2_boh3a")

[node name="Interactables" type="TileMapLayer" parent="Tiles"]
position = Vector2(288, 96)
tile_map_data = PackedByteArray("AAD9/woAAAAAAAAAAQD9/wwAAAAAAAAAAgAHABAAAAAAAAAAAwA=")
tile_set = ExtResource("2_boh3a")

[node name="Navigation" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="RoomA" type="NavigationRegion2D" parent="Navigation"]
position = Vector2(276, 190)
navigation_polygon = ExtResource("3_eyw5l")

[node name="RoomB" type="NavigationRegion2D" parent="Navigation"]
position = Vector2(552, 380)
navigation_polygon = ExtResource("4_eyw5l")

[node name="SpawnSources" type="Node2D" parent="."]

[node name="PlayerSpawn" type="Marker2D" parent="SpawnSources" groups=["player_spawns"]]
position = Vector2(94, 307)

[node name="Spawn1" type="Marker2D" parent="SpawnSources" groups=["enemy2_spawns"]]
position = Vector2(338, 18)

[node name="Spawn2" type="Marker2D" parent="SpawnSources" groups=["enemy1_spawns"]]
position = Vector2(765, 420)

[node name="Spawn3" type="Marker2D" parent="SpawnSources" groups=["enemy1_spawns"]]
position = Vector2(623, 637)

[node name="Props" type="Node2D" parent="."]

[node name="SpawnSystem" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_ou0rn")

[node name="Enemy1SpawnTimer" type="Timer" parent="SpawnSystem"]
autostart = true
